--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,11 @@
     <h2>Welcome to Data Processing Platform</h2>
     <p>Select an option from the navigation bar above:</p>
     <ul>
-        <li><a href="/preprocess">Preprocess Data</a></li>
-        <li><a href="/association-rules">Association Rules Analysis</a></li>
-        <li><a href="/decision-tree">Decision Tree Analysis</a></li>
-        <li><a href="/reduct">Rough Set Analysis (Reduct)</a></li>
+        <li><a href="{{ url_for('index') }}">Home Page</a></li>
+        <li><a href="{{ url_for('preprocess_page') }}">Preprocessing</a></li>
+        <li><a href="{{ url_for('association_rules_page') }}">Association Rules</a></li>
+        <li><a href="{{ url_for('decision_tree_page') }}">Decision Tree</a></li>
+        <li><a href="{{ url_for('reduct_page') }}">Reduct</a></li>
+        <li><a href="{{ url_for('clustering_page') }}">K-Means Clustering</a></li>
     </ul>
 {% endblock %}
