--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link {% if request.endpoint == 'preprocess_page' %}active{% endif %}" href="{{ url_for('preprocess_page') }}">Tiền xử lý</a>
+                        <a class="nav-link {% if request.endpoint == 'preprocess_page' %}active{% endif %}" href="{{ url_for('preprocess_page') }}">Preprocessing</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if request.endpoint == 'association_rules_page' %}active{% endif %}" href="{{ url_for('association_rules_page') }}">Association Rules</a>
@@ -29,6 +29,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if request.endpoint == 'reduct_page' %}active{% endif %}" href="{{ url_for('reduct_page') }}">Reduct</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.endpoint == 'clustering_page' %}active{% endif %}" href="{{ url_for('clustering_page') }}">Clustering</a>
                     </li>
                 </ul>
             </div>
