Add K-means, Bayes, Kohonen Algorithm, Fix bug

--- a/templates/decision_tree.html
+++ b/templates/decision_tree.html
@@ -44,7 +44,7 @@
                     </select>
                 </div>
                 <button type="submit" class="btn">Xây dựng cây quyết định</button>
-            </ grinding>
+            </form>
         </div>
     {% endif %}
 
