--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,8 @@
         <li><a href="{{ url_for('association_rules_page') }}">Association Rules</a></li>
         <li><a href="{{ url_for('decision_tree_page') }}">Decision Tree</a></li>
         <li><a href="{{ url_for('reduct_page') }}">Reduct</a></li>
-        <li><a href="{{ url_for('clustering_page') }}">K-Means Clustering</a></li>
+        <li><a href="{{ url_for('kmeans_page') }}">K-Means</a></li>
+        <li><a href="{{ url_for('naive_bayes_page') }}">Naive Bayes</a></li>
+        <li><a href="{{ url_for('kohonen_page') }}">Kohonen</a></li>
     </ul>
 {% endblock %}
