--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                         <a class="nav-link {% if request.endpoint == 'reduct_page' %}active{% endif %}" href="{{ url_for('reduct_page') }}">Reduct</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.endpoint == 'clustering_page' %}active{% endif %}" href="{{ url_for('clustering_page') }}">Clustering</a>
+                        <a class="nav-link {% if request.endpoint == 'kmeans_page' %}active{% endif %}" href="{{ url_for('kmeans_page') }}">K-means</a>
                     </li>
                 </ul>
             </div>
